--- a/exercicioExtra03.html
+++ b/exercicioExtra03.html
@@ -4,76 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minha página html</title>
+    <title>Document</title>
 </head>
 <style>
-    header, main, footer {
-        width: 80%;
-        margin: 0 auto;
+    #titulo1 {
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 18px;
+        color: green;
     }
 
-    header {
-        height: 50px;
-    }
-
-    article{
-        width: 100%;
+    .titulogeral {
+        font-family: tahoma;
+        font-size: 16px;
+        color: red;
     }
 </style>
 <body>
-    <header>MINHA PÁGINA HTML</header>
-    <main>
-        <article>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                Enim totam eum, voluptatibus, id corrupti dignissimos at 
-                asperiores praesentium necessitatibus atque alias? Incidunt, 
-                omnis. Velit, sint odio qui odit enim quibusdam?
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                Enim totam eum, voluptatibus, id corrupti dignissimos at 
-                asperiores praesentium necessitatibus atque alias? Incidunt, 
-                omnis. Velit, sint odio qui odit enim quibusdam?
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                Enim totam eum, voluptatibus, id corrupti dignissimos at 
-                asperiores praesentium necessitatibus atque alias? Incidunt, 
-                omnis. Velit, sint odio qui odit enim quibusdam?
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                Enim totam eum, voluptatibus, id corrupti dignissimos at 
-                asperiores praesentium necessitatibus atque alias? Incidunt, 
-                omnis. Velit, sint odio qui odit enim quibusdam?
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                Enim totam eum, voluptatibus, id corrupti dignissimos at 
-                asperiores praesentium necessitatibus atque alias? Incidunt, 
-                omnis. Velit, sint odio qui odit enim quibusdam?
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                Enim totam eum, voluptatibus, id corrupti dignissimos at 
-                asperiores praesentium necessitatibus atque alias? Incidunt, 
-                omnis. Velit, sint odio qui odit enim quibusdam?
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                Enim totam eum, voluptatibus, id corrupti dignissimos at 
-                asperiores praesentium necessitatibus atque alias? Incidunt, 
-                omnis. Velit, sint odio qui odit enim quibusdam?
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                Enim totam eum, voluptatibus, id corrupti dignissimos at 
-                asperiores praesentium necessitatibus atque alias? Incidunt, 
-                omnis. Velit, sint odio qui odit enim quibusdam?
-            </p>
-        </article>
-    </main>
-    <footer>Deive Araujo - 2021</footer>
+    <h1 id="titulo1">Título de nivel 01</h1>
+    <h2 class="titulogeral">Título de nivel 02</h2>
+    <h3 class="titulogeral">Título de nivel 03</h3>
+    <h4 class="titulogeral">Título de nivel 04</h4>
+    <h5 class="titulogeral">Título de nivel 05</h5>
+    <h6 class="titulogeral">Título de nivel 06</h6>
 </body>
 </html>
