Correção campo input

--- a/exercicio30.html
+++ b/exercicio30.html
@@ -10,7 +10,7 @@
     
     <form name="contato" method="post">
         <label for="">E-mail</label>
-        <label type="email" required name="email" value="">
+        <input type="email" required name="email" value="">
         <label for="">Senha</label>
         <input type="password" required name="email" value="@">
         <input type="submit" name="enviar" value="ENVAR">        
