desafio 02 - ciclo 01 - correcao de nome e limpeza

--- a/desafio02-ciclo01/desafio02-ciclo01.html
+++ b/desafio02-ciclo01/desafio02-ciclo01.html
@@ -35,16 +35,16 @@
             <label for="">Cep</label>
             <input class="txt" type="cep" required name="cep" value="">
             <label for="">Rua</label>
-            <input class="txt type="rua" required name="rua" value="">
+            <input class="txt type="logradouro" name="rua" value="">
             <label for="">Bairro</label>
-            <input class="txt type="bairro" required name="bairro" value="">
+            <input class="txt type="bairro" name="bairro" value="">
             <label for="">Cidade</label>
-            <input class="txt type="cidade" required name="cidade" value="">
+            <input class="txt type="cidade" name="cidade" value="">
             <label for="">Estado</label>
-            <input class="txt type="estado" required name="estado" value="">
+            <input class="txt type="estado" name="estado" value="">
             <input class="buscar" type="submit" name="buscar" value="BUSCAR">
         </form>
-        
+
     </footer>
 
 </body>
