--- a/desafio02-ciclo01/desafio02-ciclo01.html
+++ b/desafio02-ciclo01/desafio02-ciclo01.html
@@ -21,21 +21,18 @@
         
     </header>
 
-    <main class="flex bola material-icons">
-
-        <DIV>
-            <span class="flex material-icons">travel_explore</span>
-        </DIV>
-
-    </main>
+        <main class="flex bola material-icons">
+            <DIV>
+                <span class="flex material-icons">travel_explore</span>
+            </DIV>
+        </main>
 
     <footer class="flex">
-
         <form class="formulario" name="" method="post">
             <label for="">Cep</label>
             <input class="txt" type="cep" required name="cep" value="">
             <label for="">Rua</label>
-            <input class="txt type="logradouro" name="rua" value="">
+            <input class="txt type="rua" name="rua" value="">
             <label for="">Bairro</label>
             <input class="txt type="bairro" name="bairro" value="">
             <label for="">Cidade</label>
@@ -44,7 +41,6 @@
             <input class="txt type="estado" name="estado" value="">
             <input class="buscar" type="submit" name="buscar" value="BUSCAR">
         </form>
-
     </footer>
 
 </body>
